# SRG_RM_Copilot_v2

./: .replit  README.md  git commit --allow-empty -m "kick index"  pyproject.toml
.github/workflows/: ci.yml  nightly_etl.yml
src/srg_rm_copilot/: __init__.py  __main__.py  etl.py
tests/: test_cli.py  test_etl.py
