[build-system]
# Use setuptools and wheel for building.  Pinning to an explicit minimum
# version can cause resolution issues in constrained environments, so we
# depend on the default versions provided by the runner.
requires = [
  "setuptools",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "srg_rm_copilot"
version = "0.1.0"
description = "Wheelhouse ETL"
authors = [
  { name = "SynergyRentals" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.25",
  "pandas>=1.5",
  "pyarrow>=12.0",
  "typer>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-httpx>=0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "-q"
